// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventPageHeader /> renders correctly without title 1`] = `
<div
  className="container text-center"
>
  <h1>
    <FormattedMessage
      id="events-list"
      values={Object {}}
    />
  </h1>
  <FormattedMessage
    id="number-of-events"
    values={
      Object {
        "num": 10,
      }
    }
  />
</div>
`;

exports[`<EventPageHeader /> renders correcty 1`] = `
<div
  className="container text-center"
>
  <h1>
    <FormattedHTMLMessage
      id="<p>Titre personnalisé</p>"
      values={Object {}}
    />
  </h1>
  <FormattedMessage
    id="number-of-events"
    values={
      Object {
        "num": 10,
      }
    }
  />
</div>
`;
